--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Hyperspace by HTML5 UP</title>
+		<title>Portifólio - Maria E Rennó</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,10 +19,10 @@
 				<div class="inner">
 					<nav>
 						<ul>
-							<li><a href="#intro">Welcome</a></li>
-							<li><a href="#one">Who we are</a></li>
-							<li><a href="#two">What we do</a></li>
-							<li><a href="#three">Get in touch</a></li>
+							<li><a href="#intro">Home</a></li>
+							<li><a href="#one">Projetos</a></li>
+							<li><a href="#two">Skills</a></li>
+							<li><a href="#three">Entre em contato</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -34,11 +34,14 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<h1>Hyperspace</h1>
-							<p>Just another fine responsive site template designed by <a href="http://html5up.net">HTML5 UP</a><br />
-							and released for free under the <a href="http://html5up.net/license">Creative Commons</a>.</p>
+							<h1>Portifólio - Maria E Rennó</h1>
+							<p> <p>Olá! Sou Maria Eduarda Rennó, 25 anos e uma novata enstusiasta no mundo da tecnologia. Prazer! </p>
+										
+							<p> Atualmente, estou imersa nos estudos de Análise e Desenvolvimento de Sistemas, explorando a interseção fascinante entre dados, ciência e engenharia.
+								Neste espaço, compartilharei minha jornada de aprendizado através de projetos. Seja bem-vindo para acompanhar meu percurso e explorar comigo esse novo mundo!</p> <br />
+							</a></p>
 							<ul class="actions">
-								<li><a href="#one" class="button scrolly">Learn more</a></li>
+								<li><a href="#one" class="button scrolly">Veja Mais</a></li>
 							</ul>
 						</div>
 					</section>
@@ -46,37 +49,37 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
+							<a href="#" class="image"><img src="images/lady_bank.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Sed ipsum dolor</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<h2>Análise de Chrun</h2>
+									<p>Modelo de Machine Learning com base em dados históricos da empresa. Essa abordagem nos permitirá classificar os clientes em categorias de possíveis cancelamentos ou não</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="https://github.com/rr-mochiccino/portifolio_projects/blob/main/Modelo_de_Classifica%C3%A7%C3%A3o_para_Churn.ipynb" class="button">Veja</a></li>
 									</ul>
 								</div>
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
+							<a href="#" class="image"><img src="images/comment.webp" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Feugiat consequat</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<h2>Avaliação dos Comentários do IMDb</h2>
+									<p>Análise das resenhas de filmes no IMDb, classificando as avaliações como positivas ou negativas. Feito usando NLP e Apache Spark.</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="https://github.com/rr-mochiccino/portifolio_projects/blob/main/Analise_de_Coment%C3%A1rios_do_IMDB_com_NLP_e_Apache_Spark_.ipynb"" class="button">Veja</a></li>
 									</ul>
 								</div>
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
+							<a href="#" class="image"><img src="images/dog_adoption.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Ultricies aliquam</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<h2>Centro de Adoções</h2>
+									<p>Dashboard de Adoções feito no PowerBI, utilizando a base de dados do Centro de Adoções da Cidade de Austin</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="dashboard_adocoes.html" class="button">Veja</a></li>
 									</ul>
 								</div>
 							</div>
