update das skills  e contato

--- a/index.html
+++ b/index.html
@@ -85,61 +85,98 @@
 							</div>
 						</section>
 					</section>
+					
 
 				<!-- Two -->
+				<section id="one" class="wrapper style2 spotlights">
+					<section>
+						<a href="#" class="image"><img src="images/lady_bank.jpg" alt="" data-position="center center" /></a>
+						<div class="content">
+							<div class="inner">
+								<h2>Análise de Chrun</h2>
+								<p>Modelo de Machine Learning com base em dados históricos da empresa. Essa abordagem nos permitirá classificar os clientes em categorias de possíveis cancelamentos ou não</p>
+								<ul class="actions">
+									<li><a href="https://github.com/rr-mochiccino/portifolio_projects/blob/main/Modelo_de_Classifica%C3%A7%C3%A3o_para_Churn.ipynb" class="button">Veja</a></li>
+								</ul>
+							</div>
+						</div>
+					</section>
+					<section>
+						<a href="#" class="image"><img src="images/comment.webp" alt="" data-position="top center" /></a>
+						<div class="content">
+							<div class="inner">
+								<h2>Avaliação dos Comentários do IMDb</h2>
+								<p>Análise das resenhas de filmes no IMDb, classificando as avaliações como positivas ou negativas. Feito usando NLP e Apache Spark.</p>
+								<ul class="actions">
+									<li><a href="https://github.com/rr-mochiccino/portifolio_projects/blob/main/Analise_de_Coment%C3%A1rios_do_IMDB_com_NLP_e_Apache_Spark_.ipynb"" class="button">Veja</a></li>
+								</ul>
+							</div>
+						</div>
+					</section>
+					<section>
+						<a href="#" class="image"><img src="images/dog_adoption.jpg" alt="" data-position="25% 25%" /></a>
+						<div class="content">
+							<div class="inner">
+								<h2>Centro de Adoções</h2>
+								<p>Dashboard de Adoções feito no PowerBI, utilizando a base de dados do Centro de Adoções da Cidade de Austin</p>
+								<ul class="actions">
+									<li><a href="dashboard_adocoes.html" class="button">Veja</a></li>
+								</ul>
+							</div>
+						</div>
+					</section>
+				</section>
+				
+				<!-- Three -->
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
-							<h2>What we do</h2>
-							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
+							<h2>Skills</h2>
 							<div class="features">
 								<section>
 									<span class="icon solid major fa-code"></span>
-									<h3>Lorem ipsum amet</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-								</section>
-								<section>
-									<span class="icon solid major fa-lock"></span>
-									<h3>Aliquam sed nullam</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>Python</h3>
+									<p>Pandas, Numpy, Data Visualization (Seaborn,Plotly,Matplot), ETL, PySpark e Webscrapping</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-cog"></span>
-									<h3>Sed erat ullam corper</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>SQL e noSQL</h3>
+									<p>mySQL, PostgreSQL e MongoDB</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-desktop"></span>
-									<h3>Veroeros quis lorem</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>Power BI</h3>
+									<p>PowerQuery - M e DAX</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-link"></span>
-									<h3>Urna quis bibendum</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>Machine Learning</h3>
+									<p>Surpevised Learning (Decision Tree, Forest Classifier, SVM, Linear and Logic Regression, KNN) and Unsupervised Learning (K-Means) </p>
+								</section>
+								<section>
+									<span class="icon solid major fa-code"></span>
+									<h3>Linux</h3>
+									<p></p>
 								</section>
 								<section>
 									<span class="icon major fa-gem"></span>
-									<h3>Aliquam urna dapibus</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>Deep Learning</h3>
+									<p>Keras, PyTorch and NLP/NLTK</p>
 								</section>
 							</div>
-							<ul class="actions">
-								<li><a href="generic.html" class="button">Learn more</a></li>
 							</ul>
 						</div>
 					</section>
 
-				<!-- Three -->
+				<!-- Four -->
 					<section id="three" class="wrapper style1 fade-up">
 						<div class="inner">
-							<h2>Get in touch</h2>
-							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
+							<h2>Entre em contato</h2>
 							<div class="split style1">
 								<section>
 									<form method="post" action="#">
 										<div class="fields">
 											<div class="field half">
-												<label for="name">Name</label>
+												<label for="name">Nome</label>
 												<input type="text" name="name" id="name" />
 											</div>
 											<div class="field half">
@@ -147,38 +184,27 @@
 												<input type="text" name="email" id="email" />
 											</div>
 											<div class="field">
-												<label for="message">Message</label>
+												<label for="message">Mensagem</label>
 												<textarea name="message" id="message" rows="5"></textarea>
 											</div>
 										</div>
 										<ul class="actions">
-											<li><a href="" class="button submit">Send Message</a></li>
+											<li><a href="" class="button submit">Enviar Mensagem</a></li>
 										</ul>
 									</form>
 								</section>
 								<section>
 									<ul class="contact">
 										<li>
-											<h3>Address</h3>
-											<span>12345 Somewhere Road #654<br />
-											Nashville, TN 00000-0000<br />
-											USA</span>
 										</li>
 										<li>
 											<h3>Email</h3>
-											<a href="#">user@untitled.tld</a>
-										</li>
-										<li>
-											<h3>Phone</h3>
-											<span>(000) 000-0000</span>
+											<a href="#">mariaeduardarenno@gmail.com</a>
 										</li>
 										<li>
 											<h3>Social</h3>
 											<ul class="icons">
-												<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-												<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 												<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-												<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 												<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 											</ul>
 										</li>
