update dos projetos

--- a/index.html
+++ b/index.html
@@ -90,35 +90,35 @@
 				<!-- Two -->
 				<section id="one" class="wrapper style2 spotlights">
 					<section>
-						<a href="#" class="image"><img src="images/lady_bank.jpg" alt="" data-position="center center" /></a>
+						<a href="#" class="image"><img src="images/clothes.jpg" alt="" data-position="center center" /></a>
 						<div class="content">
 							<div class="inner">
-								<h2>Análise de Chrun</h2>
-								<p>Modelo de Machine Learning com base em dados históricos da empresa. Essa abordagem nos permitirá classificar os clientes em categorias de possíveis cancelamentos ou não</p>
+								<h2>Análise de Vendas Streamlit</h2>
+								<p>Dashboard contendo informações sobre a API das vendas de uma franquia de lojas. Feito no Streamlit e disponibilizado online</p>
 								<ul class="actions">
-									<li><a href="https://github.com/rr-mochiccino/portifolio_projects/blob/main/Modelo_de_Classifica%C3%A7%C3%A3o_para_Churn.ipynb" class="button">Veja</a></li>
+									<li><a href="https://stdashboardvendas-mochiccino.streamlit.app/" class="button">Veja</a></li>
 								</ul>
 							</div>
 						</div>
 					</section>
 					<section>
-						<a href="#" class="image"><img src="images/comment.webp" alt="" data-position="top center" /></a>
+						<a href="#" class="image"><img src="images/friends_shopping.jpg" alt="" data-position="top center" /></a>
 						<div class="content">
 							<div class="inner">
-								<h2>Avaliação dos Comentários do IMDb</h2>
-								<p>Análise das resenhas de filmes no IMDb, classificando as avaliações como positivas ou negativas. Feito usando NLP e Apache Spark.</p>
+								<h2>Dashboard Vendas</h2>
+								<p>Dashboard de Vendas feito no PowerBI - Criado a partir de uma base de dados de vendas de produtos para a empresa fictícia Lotus</p>
 								<ul class="actions">
-									<li><a href="https://github.com/rr-mochiccino/portifolio_projects/blob/main/Analise_de_Coment%C3%A1rios_do_IMDB_com_NLP_e_Apache_Spark_.ipynb"" class="button">Veja</a></li>
+									<li><a href="dashboard_vendas.html" class="button">Veja</a></li>
 								</ul>
 							</div>
 						</div>
 					</section>
 					<section>
-						<a href="#" class="image"><img src="images/dog_adoption.jpg" alt="" data-position="25% 25%" /></a>
+						<a href="#" class="image"><img src="images/listeningmusic.webp" alt="" data-position="25% 25%" /></a>
 						<div class="content">
 							<div class="inner">
-								<h2>Centro de Adoções</h2>
-								<p>Dashboard de Adoções feito no PowerBI, utilizando a base de dados do Centro de Adoções da Cidade de Austin</p>
+								<h2>Recomendador de Música</h2>
+								<p></p>
 								<ul class="actions">
 									<li><a href="dashboard_adocoes.html" class="button">Veja</a></li>
 								</ul>
