update dashboard de livros

--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Avaliação dos Comentários do IMDb</h2>
-									<p>Análise das resenhas de filmes no IMDb, classificando as avaliações como positivas ou negativas. Feito usando NLP e Apache Spark.</p>
+									<p>Análise das resenhas de filmes no IMDb, classificando as avaliações como positivas ou negativas. Feito usando NLP e Apache Spark</p>
 									<ul class="actions">
-										<li><a href="https://github.com/rr-mochiccino/portifolio_projects/blob/main/Analise_de_Coment%C3%A1rios_do_IMDB_com_NLP_e_Apache_Spark_.ipynb"" class="button">Veja</a></li>
+										<li><a href="https://github.com/rr-mochiccino/portifolio_projects/blob/main/Analise_de_Coment%C3%A1rios_do_IMDB_com_NLP_e_Apache_Spark_.ipynb" class="button">Veja</a></li>
 									</ul>
 								</div>
 							</div>
@@ -126,6 +126,22 @@
 						</div>
 					</section>
 				</section>
+					<!-- Two -->
+					<section id="one" class="wrapper style2 spotlights">
+						<section>
+							<a href="#" class="image"><img src="images/book_girl.jpg" alt="" data-position="center center" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>Dashboard Empresa de Livros</h2>
+									<p>Dashboard sobre as vendas e metas da empresa de livro fictícia Buscante feita no PowerBI</p>
+									<ul class="actions">
+										<li><a href="dashboard_livros.html" class="button">Veja</a></li>
+									</ul>
+								</div>
+							</div>
+						</section>
+						<section>
+
 				
 				<!-- Three -->
 					<section id="two" class="wrapper style3 fade-up">
