add target blank

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 									<h2>Análise de Chrun</h2>
 									<p>Modelo de Machine Learning com base em dados históricos da empresa. Essa abordagem nos permitirá classificar os clientes em categorias de possíveis cancelamentos ou não</p>
 									<ul class="actions">
-										<li><a href="https://github.com/rr-mochiccino/portifolio_projects/blob/main/Modelo_de_Classifica%C3%A7%C3%A3o_para_Churn.ipynb" class="button">Veja</a></li>
+										<li><a href="https://github.com/rr-mochiccino/portifolio_projects/blob/main/Modelo_de_Classifica%C3%A7%C3%A3o_para_Churn.ipynb" class="button" target="_blank">Veja</a></li>
 									</ul>
 								</div>
 							</div>
@@ -79,7 +79,7 @@
 									<h2>Centro de Adoções</h2>
 									<p>Dashboard de Adoções feito no PowerBI, utilizando a base de dados do Centro de Adoções da Cidade de Austin</p>
 									<ul class="actions">
-										<li><a href="dashboard_adocoes.html" class="button">Veja</a></li>
+										<li><a href="dashboard_adocoes.html" class="button" target="_blank">Veja</a></li>
 									</ul>
 								</div>
 							</div>
@@ -96,7 +96,7 @@
 								<h2>Análise de Vendas Streamlit</h2>
 								<p>Dashboard contendo informações sobre a API das vendas de uma franquia de lojas. Feito no Streamlit e disponibilizado online</p>
 								<ul class="actions">
-									<li><a href="https://stdashboardvendas-mochiccino.streamlit.app/" class="button">Veja</a></li>
+									<li><a href="https://stdashboardvendas-mochiccino.streamlit.app/" class="button" target="_blank" >Veja</a></li>
 								</ul>
 							</div>
 						</div>
@@ -108,7 +108,7 @@
 								<h2>Dashboard Vendas</h2>
 								<p>Dashboard de Vendas feito no PowerBI - Criado a partir de uma base de dados de vendas de produtos para a empresa fictícia Lotus</p>
 								<ul class="actions">
-									<li><a href="dashboard_vendas.html" class="button">Veja</a></li>
+									<li><a href="dashboard_vendas.html" class="button" target="_blank" >Veja</a></li>
 								</ul>
 							</div>
 						</div>
@@ -120,7 +120,7 @@
 								<h2>Recomendador de Música</h2>
 								<p></p>
 								<ul class="actions">
-									<li><a href="dashboard_adocoes.html" class="button">Veja</a></li>
+									<li><a href="dashboard_adocoes.html" class="button" target="_blank">Veja</a></li>
 								</ul>
 							</div>
 						</div>
@@ -135,7 +135,7 @@
 									<h2>Dashboard Empresa de Livros</h2>
 									<p>Dashboard sobre as vendas e metas da empresa de livro fictícia Buscante feita no PowerBI</p>
 									<ul class="actions">
-										<li><a href="dashboard_livros.html" class="button">Veja</a></li>
+										<li><a href="dashboard_livros.html" class="button" target="_blank">Veja</a></li>
 									</ul>
 								</div>
 							</div>
@@ -220,8 +220,8 @@
 										<li>
 											<h3>Social</h3>
 											<ul class="icons">
-												<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-												<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+												<li><a href="https://github.com/rr-mochiccino" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+												<li><a href="https://www.linkedin.com/in/maria-renno/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 											</ul>
 										</li>
 									</ul>
