--- a/index.html
+++ b/index.html
@@ -129,19 +129,44 @@
 					<!-- Two -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image"><img src="images/book_girl.jpg" alt="" data-position="center center" /></a>
+							<a href="#" class="image"><img src="images/sales.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Dashboard Empresa de Livros</h2>
-									<p>Dashboard sobre as vendas e metas da empresa de livro fictícia Buscante feita no PowerBI</p>
-									<ul class="actions">
-										<li><a href="dashboard_livros.html" class="button" target="_blank">Veja</a></li>
+									<h2>Python com SQLite</h2>
+									<p>Para esse estudo será utilizado o SQLite, pois é uma opção mais adequada para projetos simples e possui uma alta portabilidade, sendo funcional em várias plataformas.
+										Nele estamos analisando os produtos vendidos e as vendas de uma empresa ficcional de roupas.
+									</p>									
+								<ul class="actions">
+										<li><a href="https://github.com/rr-mochiccino/estudos_sql/blob/main/Python_com_SQL.ipynb" class="button" target="_blank">Veja</a></li>
 									</ul>
 								</div>
 							</div>
 						</section>
 						<section>
-
+							<a href="#" class="image"><img src="images/book_girl.jpg" alt="" data-position="top center" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>Dashboard Empresa de Livros</h2>
+									<p>Dashboard sobre as vendas e metas da empresa de livro fictícia Buscante feita no PowerBI</p>
+									<ul class="actions">
+										<li><a href="dashboard_livros.html" class="button" target="_blank" >Veja</a></li>
+									</ul>
+								</div>
+							</div>
+						</section>
+						<section>
+							<a href="#" class="image"><img src="images/mal.png" alt="" data-position="25% 25%" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>Analise Animes MyAnimeList</h2>
+									<p>Análise do Dataset do site MyAnimeList, que classifica anime - desenhos japoneses - pela nota dos usuários. Foi utilizado o MYSQL para a criação do script de análise.</p>
+									<ul class="actions">
+										<li><a href="https://github.com/rr-mochiccino/estudos_sql/blob/main/portifolio_anime.sql" class="button" target="_blank">Veja</a></li>
+									</ul>
+								</div>
+							</div>
+						</section>
+					</section>
 				
 				<!-- Three -->
 					<section id="two" class="wrapper style3 fade-up">
