arrumando a palavra churn

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 							<a href="#" class="image"><img src="images/lady_bank.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Análise de Chrun</h2>
+									<h2>Análise de Churn</h2>
 									<p>Modelo de Machine Learning com base em dados históricos da empresa. Essa abordagem nos permitirá classificar os clientes em categorias de possíveis cancelamentos ou não</p>
 									<ul class="actions">
 										<li><a href="https://github.com/rr-mochiccino/portifolio_projects/blob/main/Modelo_de_Classifica%C3%A7%C3%A3o_para_Churn.ipynb" class="button" target="_blank">Veja</a></li>
@@ -159,7 +159,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Analise Animes MyAnimeList</h2>
-									<p>Análise do Dataset do site MyAnimeList, que classifica anime - desenhos japoneses - pela nota dos usuários. Foi utilizado o MYSQL para a criação do script de análise.</p>
+									<p>Análise do Dataset do site MyAnimeList, que classifica anime - desenhos japoneses - pela nota dos usuários. Foi utilizado o mySQL para a criação do script de análise.</p>
 									<ul class="actions">
 										<li><a href="https://github.com/rr-mochiccino/estudos_sql/blob/main/portifolio_anime.sql" class="button" target="_blank">Veja</a></li>
 									</ul>
