--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 								<h2>Recomendador de Música</h2>
 								<p></p>
 								<ul class="actions">
-									<li><a href="dashboard_adocoes.html" class="button" target="_blank">Veja</a></li>
+									<li><a href="https://github.com/rr-mochiccino/portifolio_projects/blob/main/Recomendador_de_Musica.ipynb" class="button" target="_blank">Veja</a></li>
 								</ul>
 							</div>
 						</div>
